[package]
name = "teleport-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = "0.8.4"
