[package]
name = "teleport-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teleport-api = { version = "0.1", path = "../teleport-api" }
tonic = "0.8.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio-rustls = "0.23.4"
hyper-rustls = { version = "0.23.2", features = ["http2"] }
hyper = { version = "0.14.23", features = ["http2"] }
rustls-pemfile = "1.0.2"
rustls-native-certs = "0.6.2"
tower = "0.4.13"
rsa = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
dirs = "4.0.0"
serde_yaml = "0.9.17"

