[package]
name = "teleport-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
dirs = "4.0.0"
hyper = { version = "0.14.23", features = ["http2"] }
hyper-rustls = { version = "0.23.2", features = ["http2"] }
miette = { version = "5.5.0", features = ["fancy"] }
rsa = "0.8.1"
russh = { version = "0.36.0", features = ["openssl"] }
russh-keys = { version = "0.24.0", features = ["openssl"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
teleport-api = { version = "0.1", path = "../teleport-api" }
thiserror = "1.0.38"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.23.4"
tonic = "0.8.3"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

